syntax = "proto3";

package disruption_listener;

option go_package = "./disruption_listener";

import "google/protobuf/empty.proto";

service DisruptionListener {
  rpc SendDisruption(DisruptionSpec) returns (google.protobuf.Empty) {}
  rpc DisruptionStatus(google.protobuf.Empty) returns (DisruptionSpec) {}
  rpc CleanDisruption(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}

message DisruptionSpec {
  repeated EndpointSpec endpoints = 1;
}

message EndpointSpec {
  string targetEndpoint = 1;
  repeated AlterationSpec alterations = 2;
}

message AlterationSpec {
  string errorToReturn = 1;
  string overrideToReturn = 2;
  int32 queryPercent = 3;
}
